[gd_scene load_steps=6 format=2]

[ext_resource path="res://View/teachers/EditQnsQDetails.gd" type="Script" id=1]
[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Model/Labels/Delete.tscn" type="PackedScene" id=3]
[ext_resource path="res://Model/Labels/Save.tscn" type="PackedScene" id=4]
[ext_resource path="res://View/util/customQuestionSet.tscn" type="PackedScene" id=5]

[node name="World" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="Header" parent="TemplateScreen" index="3"]
text = "EDIT QUESTIONS"

[node name="PlayBoard" parent="." index="1"]
margin_top = 91.0
margin_right = 289.0

[node name="MarginContainer" type="MarginContainer" parent="PlayBoard" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer" index="0"]
margin_left = 20.0
margin_top = 20.0
margin_right = 557.0
margin_bottom = 432.0
custom_constants/separation = 20

[node name="QnList" type="VBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="0"]
margin_right = 537.0
margin_bottom = 248.0
custom_constants/separation = 20

[node name="Qn1" parent="PlayBoard/MarginContainer/VBoxContainer/QnList" index="0" instance=ExtResource( 5 )]
margin_right = 537.0
margin_bottom = 248.0

[node name="Button" parent="PlayBoard/MarginContainer/VBoxContainer" index="1" instance=ExtResource( 4 )]
margin_top = 268.0
margin_right = 537.0
margin_bottom = 328.0

[node name="Button2" parent="PlayBoard/MarginContainer/VBoxContainer" index="2" instance=ExtResource( 3 )]
margin_top = 348.0
margin_right = 537.0
margin_bottom = 408.0
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
